--- a/index.html
+++ b/index.html
@@ -11,24 +11,29 @@
 </head>
 <body>
   <main class="container">
-    <div class="img-holder">
+    <button type="button" class="img-holder">
       <img class="img" src="/images/image-equilibrium.jpg" alt="Equilibrium Image">
-    </div>
+    </button>
     <section class="text-content">
-      <h1 class="title">Equilibrium #3429</h1>
+      <a href="#" class="text">
+        <h1 class="title">Equilibrium #3429</h1>
+      </a>
       <p class="desc">Our Equilibrium collection promotes balance and calm.</p>
-      <div class="same-line">
-        <img class="eth-icon" src="/images/icon-ethereum.svg" alt="ethereum icon" class="eth">
-        <p class="eth-numbers">0.041 ETH</p>
-        <img src="/images/icon-clock.svg" alt="clock icon" class="time-icon">
-        <p class="days">3 days left</p>
-      </div>
+      <ul class="same-line">
+        <li class="ethereum">
+          <img class="eth-icon" src="/images/icon-ethereum.svg" alt="" aria-hidden="true" class="eth">
+          <p class="eth-numbers">0.041 ETH</p>
+        </li>
+        <li class="time">
+          <img src="/images/icon-clock.svg" alt="" aria-hidden="true" class="time-icon">
+          <p class="days">3 days left</p>
+        </li>
+      </ul>
     </section>
-    <div class="border-bottom"></div>
-    <footer class="jules">
+    <figure class="jules">
       <img src="/images/image-avatar.png" alt="Jules avatar" class="avatar">
-      <p class="jules-attribution">Creation of <span>Jules Wyvern</span></p>
-    </footer>
+      <figcaption class="jules-attribution">Creation of <span><a href="#">Jules Wyvern</a></span><figcaption> 
+    </figure>
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
