--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
     <figure class="jules">
       <img src="/images/image-avatar.png" alt="Jules avatar" class="avatar">
-      <figcaption class="jules-attribution">Creation of <span><a href="#">Jules Wyvern</a></span><figcaption> 
+      <figcaption class="jules-attribution">Creation of <span><a href="#">Jules Wyvern</a></span></figcaption> 
     </figure>
   </main>
   <footer class="attribution">
