--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 </head>
 <body>
   <main class="container">
-    <button type="button" class="img-holder">
+    <button type="button" class="img-holder" alt="">
       <img class="img" src="/images/image-equilibrium.jpg" alt="Equilibrium Image">
     </button>
-    <section class="text-content">
-      <a href="#" class="text">
-        <h1 class="title">Equilibrium #3429</h1>
-      </a>
+    <div class="text-content">
+      <h1 class="title"><a href="#" class="text">Equilibrium #3429</a></h1>
       <p class="desc">Our Equilibrium collection promotes balance and calm.</p>
       <ul class="same-line">
         <li class="ethereum">
@@ -29,10 +27,10 @@
           <p class="days">3 days left</p>
         </li>
       </ul>
-    </section>
+    </div>
     <figure class="jules">
       <img src="/images/image-avatar.png" alt="Jules avatar" class="avatar">
-      <figcaption class="jules-attribution">Creation of <span><a href="#">Jules Wyvern</a></span></figcaption> 
+      <figcaption class="jules-attribution">Creation of <span><a href="#">Jules Wyvern</a></span></figcaption>
     </figure>
   </main>
   <footer class="attribution">
