--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <main class="container">
-    <button type="button" class="img-holder" alt="">
-      <img class="img" src="/images/image-equilibrium.jpg" alt="Equilibrium Image">
+    <button type="button" class="img-holder" aria-label="nft">
+      <img class="img" src="/images/image-equilibrium.jpg" alt="See the full NFT">
     </button>
     <div class="text-content">
       <h1 class="title"><a href="#" class="text">Equilibrium #3429</a></h1>
